# fetchmail

./: .cvsignore  .gitignore  .mailmap  BUGS  CHANGES  COPYING  Doxyfile  IDEAS.txt  IMAPCapa.cpp  IMAPCapa.h  INSTALL  MANIFEST  Mailbox-Names-UTF7.txt  Makefile.am  Makefile.in  NEWS  OPTIONS  PORTABILITY  README  README.PWMD  README.SSL  README.SSL-SERVER  README.freebsd  README.git  README.maintainer  README.mapi  README.packaging  README.svn  RELEASE-INSTRUCTIONS  RELEASEVERSIONS  THANKS  TODO  TODO-6.3.20  TODO-6.4  TODO-7.0  TODO.txt  acconfig.h  aclocal.m4  autogen.sh  base64.c  (+140 more)
RFC/: draft-klensin-cram-03.txt  lan-mail-protocols  rfc2060.txt
beos/: beos_nameser.h
contrib/: PopDel.py  README  README.mold_remover  domino  fetchmail-mda-fork.README  fetchmail-mda-fork.patch  fetchmail-mode.el  fetchsetup  gai.c  mold_remover.py  rawlog.patch  zsh-completion
dist-tools/: getstats.py  indexgen.sh  makerelease  makerelease.pl  manServer.pl  send-erratum-notice.sh  send-security-announce.sh  timeplot  uploadfaq
dist-tools/shipper/: buildrpms  rpm2lsm.1  shipper.1
dist-tools/test/: test-request  testmda  torturetest.gladep  torturetest.py
libesmtp/: gethostbyname.c  gethostbyname.h
libntlm-0.21/: Makefile
m4-local/: Makefile.am  ac_ma_search_package.m4  gethostbyname_r.m4
mime64/: Makefile  README  mime.txt  mime64.c
po/: .cvsignore  .gitignore  .pot  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  ca.gmo  ca.po  cs.gmo  cs.po  da.gmo  da.po  de.gmo  de.po  el.gmo  el.po  en_GB.po  eo.po  es.gmo  es.po  fetchmail.pot  fi.po  fr.gmo  fr.po  fr.po.orig  fr.po.rej  gl.gmo  gl.po  id.po  it.po  ja.gmo  ja.po  nl.po  pl.gmo  pl.po  pl.po.orig  pl.po.rej  pt_BR.gmo  pt_BR.po  (+9 more)
shipper/: README
trio/: config.status  example.c  regression
trio/doc/: doc.h  doc_nan.h  doc_printf.h
trunk/: BUGS  INSTALL  Makefile.am  NEWS  RELEASE-INSTRUCTIONS  autogen.sh  checkalias.c  configure.ac  cram.c  env.c  fetchmail-FAQ.html  fetchmail-features.html  fetchmail.c  fetchmail.h  fetchmail.man  fetchmailconf.py  md5.h  mxget.c  netrc.c  odmr.c  options.c  rcfile_y.y  rfc2047e.c  sink.c  smtp.c  smtp.h  specgen.sh  uid.c  unmime.c
trunk/dist-tools/: getstats.py  growthplot  listsize  makerelease  manServer.pl
trunk/dist-tools/shipper/: Makefile  rpm2lsm  rpm2lsm.xml  shipper  shipper.spec  shipper.xml
trunk/dist-tools/test/: testmail
trunk/po/: LINGUAS  da.po  gl.po  pl.po  pt_BR.po  ru.po  sk.po  sq.po
trunk/trio/: Makefile  config.cache  configure  example.c
trunk/trio/doc/: doc_register.h
ucs/: README.svn  norm_charmap.c
vcs-tools/: README.txt  fetchmail-svn2git.sh  fetchmail.authors  fetchmail.rules
website/: Mailbox-Names-UTF7.html  design-notes.html  esrs-design-notes.html  fetchmail-EN-2010-03.txt  fetchmail-FAQ.html  fetchmail-SA-2005-01.txt  fetchmail-SA-2005-02.txt  fetchmail-SA-2005-03.txt  fetchmail-SA-2006-01.txt  fetchmail-SA-2006-02.txt  fetchmail-SA-2006-03.txt  fetchmail-SA-2007-01.txt  fetchmail-SA-2007-02.txt  fetchmail-SA-2008-01.txt  fetchmail-SA-2009-01.txt  fetchmail-SA-2010-01.txt  fetchmail-SA-2010-02.txt  fetchmail-SA-2011-01.txt  fetchmail-SA-2012-01.txt  fetchmail-SA-2012-02.txt  fetchmail-features.html  fetchmail-man.html  index.html  security.html  sitestyle.css  testservers.html  todo.html
website/host-scripts/: upload-website.sh
